--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
@@ -11,3 +11,12 @@
 "date" = "Date";
 "value" = "Value";
 "location" = "Location";
+"enter_name" = "Enter your name";
+"enter_email" = "Enter your e-mail";
+"cancel" = "Cancel";
+"welcome" = "Welcome";
+"want_to_login" = "Are you interested in this event? Let's login!";
+"success" = "Success";
+"logged" = "You're logged!";
+"fail" = "Failed";
+"error" = "Somenthing's wrong. Try again.";
