Allows permittion to save shared image on PhotoLibrary

--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "enter_email" = "Enter your e-mail";
 "cancel" = "Cancel";
 "welcome" = "Welcome";
-"want_to_login" = "Are you interested in this event? Let's login!";
+"want_to_checkin" = "Enter the information below for check-in.";
 "success" = "Success";
 "logged" = "You're logged!";
 "fail" = "Failed";
