--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "logged" = "You're logged!";
 "fail" = "Failed";
 "error" = "Somenthing's wrong. Try again.";
+"type_valid_email" = "Type a valid email.";
