--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/pt-BR.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/pt-BR.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "logged" = "Você entrou!";
 "fail" = "Falha";
 "error" = "Algo deu errado. Tente novamente.";
+"type_valid_email" = "Insira um e-mail válido.";
