--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "fail" = "Failed";
 "error" = "Somenthing's wrong. Try again.";
 "type_valid_email" = "Type a valid email.";
+"loading" = "Loading...";
