--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/pt-BR.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/pt-BR.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "fail" = "Falha";
 "error" = "Algo deu errado. Tente novamente.";
 "type_valid_email" = "Insira um e-mail válido.";
+"loading" = "Carregando...";
