--- a/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
+++ b/woopSicredi-jobs/woopSicredi-jobs/Settings/View/Locale/en.lproj/Localizable.strings
@@ -22,3 +22,7 @@
 "error" = "Somenthing's wrong. Try again.";
 "type_valid_email" = "Type a valid email.";
 "loading" = "Loading...";
+"title" = "Title";
+"date" = "Date";
+"price" = "Price";
+"location" = "Location";
